<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clicky_room_container"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:focusable="true"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground"
    android:paddingRight="32dp"
    android:paddingLeft="16dp"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/content_value"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:textColor="@color/AttentecBlack"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/power_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/AttentecGrey"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/power_data"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/temp_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/AttentecGrey"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/temperature"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
